fix: scrollbar

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap');
 @import 'theme';
 
-html,
 body {
   padding: 0;
   margin: 0;
